# QtVideoEditor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc
.github/workflows/: git_ci.yml
Backend/: CMakeLists.txt  path_creator.h  random_generator.cpp  random_generator.h  random_number_generator.cpp  random_number_generator.h  thumbnail_creator.h  types.h  utility.h  video_filters.cpp  video_filters.h
GUI/: CMakeLists.txt  menu.cpp  menu.h
GUI/Code/: video_list_model.cpp  video_list_model.h
GUI/Resources/: main.qml
Scripts/: install.sh
